# huggle3-qt-lx

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodingStyle.txt  GC.md  README.md  Review.txt  configure  debian.sh  mainpage.md
.github/: FUNDING.yml  (+1 more)
debian/: rules  (+3 more)
huggle/: .gitignore  CMakeLists.txt  CPackInfo  Localization  README  TranslationStats  UserConfiguration.cpp  Version.qrc  aboutform.cpp  aboutform.h  aboutform.hpp  aboutform.ui  apiquery.cpp  apiquery.h  apiquery.hpp  apiqueryresult.cpp  apiqueryresult.hpp  blockuser.cpp  blockuser.h  blockuser.hpp  blockuser.ui  build.sh  collectable.cpp  collectable.h  collectable.hpp  collectable_smartptr.cpp  collectable_smartptr.hpp  config.hpp  configuration.cpp  configuration.h  configuration.hpp  configure  configure.ps1  contentmodels.cpp  contentmodels.hpp  core.cpp  core.h  core.hpp  custommessage.cpp  custommessage.hpp  (+277 more)
huggle/Localization/: ar.txt  ar.xml  bg.txt  bg.xml  bn.txt  bn.xml  br.xml  bs.xml  cz.txt  cz.xml  de.txt  de.xml  diq.xml  en-gb.xml  en.txt  en.xml  es.txt  es.xml  eu.xml  fa.txt  fa.xml  fr.txt  fr.xml  gu.xml  he.xml  hi.txt  hi.xml  hu.xml  id.xml  it.txt  it.xml  ja.txt  ja.xml  ka.txt  ka.xml  kk-cyrl.xml  km.txt  km.xml  kn.txt  kn.xml  (+44 more)
huggle/Resources/: DefaultConfig.txt  Definitions.txt  Definitions.xml  DiffBeginning.txt  Header.txt  Message.txt  huggle.icns  huggle_tips.txt
huggle/Resources/Python/: definitions.py
huggle/Resources/html/: DiffBeginning.txt  Header.html  Header.txt  Message.html  RTL.css  StopFire.html  empty.html
huggle/TranslationStats/: README.md  definitions.hpp  localization.cpp  localization.hpp  main.cpp  text.qrc  ts.pro
huggle/debian/: changelog  control  copyright
huggle/hunker/: README.txt  main.cpp  makefilehunker.pro
huggle/man/: huggle.1
huggle/qt/: huggle.xml  vs2012_intellisense.xml
huggle/sdk/: CMakeLists.txt  README  generate.sh  sources.list
huggle/sounds/: README  resources.qrc
huggle/tests/: README.md
huggle/tests/test/: .gitignore  CMakeLists.txt  Page.qrc  config.txt  config.yaml  page01.txt  page03.txt  page04.txt  test.pro  tp0001.txt  tp0005.txt  tp0006.txt  tp0007.txt  tp0009.txt  tp0010.txt  tp0011.txt  tp0012.txt  tp0013.txt  tp0014.txt  tst_testmain.cpp
huggle/web_engine/: huggleweb.cpp  huggleweb.hpp  hugglewebpage.hpp
huggle/webkit/: huggleweb.cpp  huggleweb.hpp
src/: CMakeLists.txt  CPackInfo  Localization  README
src/TranslationStats/: localization.hpp  main.cpp  text.qrc
src/huggle/: CMakeLists.txt  README  main.cpp
src/huggle/man/: README.txt
src/huggle_core/: CMakeLists.txt  README  Version.qrc  aboutform.cpp  aboutform.hpp  apiquery.cpp  apiquery.hpp  apiqueryresult.cpp  apiqueryresult.hpp  blockuser.cpp  blockuser.hpp  collectable.cpp  collectable.hpp  collectable_smartptr.cpp  collectable_smartptr.hpp  configuration.cpp  configuration.hpp  configure.ps1  core.cpp  core.hpp  custommessage.cpp  custommessage.hpp  custommessage.ui  definitions_prod.hpp  deleteform.hpp  editbar.hpp  editquery.cpp  editquery.hpp  editqueue.cpp  editqueue.hpp  events.cpp  events.hpp  exception.cpp  exception.hpp  exceptionhandler.cpp  exceptionhandler.hpp  exceptionwindow.cpp  exceptionwindow.hpp  gc.cpp  gc.hpp  (+115 more)
src/huggle_core/Localization/: ar.xml  bs.xml  de.xml  fi.xml  he.xml  hu.xml  ms.xml  qqq.xml  zh-hant.xml  zh.xml
src/huggle_core/Resources/: Definitions.xml
src/huggle_core/Resources/ecma/: help.js  huggle.js
src/huggle_core/Resources/html/: DiffBeginning.html  DiffEnd.html  Header.html  HeaderDark.html  StopFire.html  dev.html  empty.html  empty_tab.html
src/huggle_core/deprecated/: pythonengine.hpp
src/huggle_core/scripting/: genericjsclass.cpp  genericjsclass.hpp  huggleeditingjs.cpp  huggleeditingjs.hpp  huggleeditjs.cpp  huggleeditjs.hpp  hugglefeedjs.cpp  hugglefeedjs.hpp  hugglehanjs.cpp  hugglehanjs.hpp  hugglejs.cpp  hugglejs.hpp  hugglequeryjs.cpp  hugglequeryjs.hpp  huggleunsafejs.cpp  huggleunsafejs.hpp  jshighlighter.cpp  jshighlighter.hpp  jsmarshallinghelper.cpp  jsmarshallinghelper.hpp  script.cpp  script.hpp  scriptfunctionhelp.cpp  scriptfunctionhelp.hpp  scripts.qrc
src/huggle_core/scripting/ecma/: help.js  huggle.js  template  types.js
src/huggle_l10n/: CMakeLists.txt  huggle_l10n.cpp  huggle_l10n.hpp  text.qrc
src/huggle_l10n/Localization/: README.md  ar.xml  be-tarask.xml  bg.xml  bn.xml  br.xml  bs.xml  cz.xml  da.xml  de.xml  diq.xml  en-gb.xml  en.xml  es.xml  eu.xml  fa.xml  fi.xml  fr.xml  ga.xml  gu.xml  he.xml  hi.xml  hu.xml  id.xml  it.xml  ja.xml  ka.xml  kk-cyrl.xml  km.xml  kn.xml  ko.xml  ksh.xml  lb.xml  lki.xml  lt.xml  lv.xml  mk.xml  ml.xml  mr.xml  ms.xml  (+31 more)
src/huggle_res/: CMakeLists.txt  huggle_res.cpp  huggle_res.hpp  pictures.qrc
src/huggle_ui/: CMakeLists.txt  aboutform.cpp  aboutform.hpp  aboutform.ui  blockuser.cpp  blockuser.hpp  blockuserform.cpp  blockuserform.hpp  blockuserform.ui  custommessage.cpp  custommessage.hpp  custommessage.ui  deleteform.cpp  deleteform.hpp  deleteform.ui  editbar.cpp  editbar.hpp  editbar.ui  editbaritem.cpp  editbaritem.hpp  editbaritem.ui  editform.cpp  editform.hpp  editform.ui  exceptionwindow.cpp  exceptionwindow.hpp  exceptionwindow.ui  genericbrowser.cpp  genericbrowser.hpp  hgapplication.cpp  hgapplication.hpp  history.cpp  history.hpp  history.ui  historyform.cpp  historyform.hpp  hugglelog.cpp  hugglelog.hpp  hugglelog.ui  hugglequeue.cpp  (+97 more)
src/huggle_ui/scripting/: huggleuijs.cpp  huggleuijs.hpp  scriptform.cpp  scriptform.hpp  scriptform.ui  scriptingmanager.cpp  scriptingmanager.hpp  scriptingmanager.ui  uiscript.cpp  uiscript.hpp
src/huggle_ui/web_engine/: huggleweb.cpp  huggleweb.hpp  huggleweb.ui  hugglewebpage.cpp  hugglewebpage.hpp
src/huggle_ui/webkit/: huggleweb.cpp  huggleweb.hpp  huggleweb.ui
src/scripts/: CMakeLists.txt  README  devtools.js  devtools.jsu  template
src/tests/: README.md
src/tests/test/: CMakeLists.txt  config.txt  config.yaml  page02.txt  prepare_cmake.sh  tp0002.txt  tp0003.txt  tp0004.txt  tp0008.txt  tp0015.txt  tst_testmain.cpp
(+59 files in other folders)
