# This is a build file for Huggle (used with cmake)
cmake_minimum_required (VERSION 2.8.7)

if (NOT HUGGLE_CMAKE)
    message(FATAL_ERROR "This cmake file can't be used on its own, it must be included from parent folder")
endif()

project(huggle_core)
execute_process(COMMAND "${CMAKE_SOURCE_DIR}/update.sh" WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})

if (NOT AUDIO)
    add_definitions(-DHUGGLE_NOAUDIO)
endif()

if (WEB_ENGINE)
    add_definitions(-DHUGGLE_WEBEN)
endif()

if (LINUX_SNAP)
    add_definitions(-DHUGGLE_SNAP)
endif()

set(CMAKE_include_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Xml REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Network REQUIRED)
set(QT_INCLUDES ${Qt5Gui_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5Network_INCLUDE_DIRS} ${Qt5Xml_INCLUDE_DIRS} ${Qt5Svg_INCLUDE_DIRS})
if (NOT WEB_ENGINE)
    find_package(Qt5WebKit REQUIRED)
    set(QT_INCLUDES ${QT_INCLUDES} ${Qt5WebKit_INCLUDE_DIRS})
else()
    find_package(Qt5WebEngine REQUIRED)
    find_package(Qt5WebEngineWidgets REQUIRED)
    set(QT_INCLUDES ${QT_INCLUDES} ${Qt5WebEngine_INCLUDE_DIRS})
endif()
if (AUDIO)
    find_package(Qt5Multimedia REQUIRED)
    set(QT_INCLUDES ${QT_INCLUDES} ${Qt5Multimedia_INCLUDE_DIRS})
endif()
include_directories(${QT_INCLUDES})

file(GLOB srcx "*.cpp")
file(GLOB resx "*.qrc")
file(GLOB uixx "*.ui")
file(GLOB headers "*.hpp")

if (NOT WEB_ENGINE)
    file(GLOB srcx_web "webkit/*.cpp")
    file(GLOB resx_web "webkit/*.qrc")
    file(GLOB uixx_web "webkit/*.ui")
    file(GLOB headers_web "webkit*.hpp")
else()
    file(GLOB srcx_web "web_engine/*.cpp")
    file(GLOB resx_web "web_engine/*.qrc")
    file(GLOB uixx_web "web_engine/*.ui")
    file(GLOB headers_web "web_engine*.hpp")
endif()

set(huggle_core_SOURCES ${srcx} ${srcx_web})
set(huggle_core_FORMS ${uixx} ${uixx_web})
set(huggle_core_RESOURCES ${resx} ${resx_web})
if (AUDIO)
    set(huggle_core_RESOURCES ${huggle_core_RESOURCES} "sounds/resources.qrc")
endif()

QT5_WRAP_CPP(huggle_core_HEADERS_MOC ${huggle_core_HEADERS})
QT5_WRAP_UI(huggle_core_FORMS_HEADERS ${huggle_core_FORMS})
QT5_ADD_RESOURCES(huggle_core_RESOURCES_RCC ${huggle_core_RESOURCES})

add_definitions(${QT_DEFINITIONS})
add_definitions( -DQT_USE_QSTRINGBUILDER )

add_library(huggle_core SHARED ${huggle_core_SOURCES} ${headers} ${headers_web} ${huggle_core_HEADERS_MOC} ${huggle_core_FORMS_HEADERS} ${huggle_core_RESOURCES_RCC})
target_link_libraries(huggle_core ${QT_LIBRARIES})
set_target_properties(huggle_core PROPERTIES COMPILE_FLAGS -DHUGGLE_LIBRARY)

if (WIN32)
    target_link_libraries(huggle_core dbghelp)
endif()

target_link_libraries(huggle_core huggle_l10n huggle_res irc ircclient yaml-cpp)

if (NOT WEB_ENGINE)
    qt5_use_modules(huggle_core Core Gui Widgets WebKitWidgets WebKit Network Xml)
else()
    qt5_use_modules(huggle_core Core Gui Widgets WebEngineWidgets WebEngine Network Xml)
endif()

if (AUDIO)
    qt5_use_modules(huggle_core Multimedia)
endif()

include_directories(${CMAKE_CURRENT_BINARY_DIR})
INSTALL(TARGETS huggle_core DESTINATION lib)
